# niftyreg

./: .clang-format  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE.txt  README.md  README.txt  niftyreg.sln  niftyreg.vcxproj  niftyreg.vcxproj.filters  output.txt  pyproject.toml  setup.cfg  setup.py  update_version_hook
cmake/: CMakeLists.txt  FindOPENCL.cmake  FindOpenCL.cmake  NIFTYREGConfig.cmake.in
nifti/: CMakeLists.txt  nifti1_io.c
nifty_reg/: CMakeLists.txt
nifty_reg/nifti/: CMakeLists.txt
nifty_reg/reg-apps/: CMakeLists.txt  reg_aladin.cpp  reg_average.cpp  reg_benchmark.cpp  reg_f3d.cpp  reg_full.sh  reg_jacobian.cpp  reg_mat44_test.cpp  reg_resample.cpp  reg_tools.cpp  reg_transform.cpp
nifty_reg/reg-lib/: CMakeLists.txt  _reg_KLdivergence.cpp  _reg_affineTransformation.cpp  _reg_affineTransformation.h  _reg_affineTransformation_gpu.cu  _reg_affineTransformation_gpu.h  _reg_affineTransformation_kernels.cu  _reg_aladin.cpp  _reg_blockMatching.cpp  _reg_blockMatching.h  _reg_blockMatching_gpu.cu  _reg_blocksize_gpu.h  _reg_bspline.cpp  _reg_bspline.h  _reg_bspline_comp.cpp  _reg_bspline_comp.h  _reg_bspline_gpu.cu  _reg_bspline_kernels.cu  _reg_f3d.cpp  _reg_f3d.h  _reg_f3d2.cpp  _reg_f3d2.h  _reg_f3d_gpu.cpp  _reg_f3d_gpu.h  _reg_f3d_sym.cpp  _reg_f3d_sym.h  _reg_femTransformation.cpp  _reg_femTransformation.h  _reg_globalTransformation.cpp  _reg_globalTransformation_gpu.cu  _reg_localTransformation.cpp  _reg_localTransformation.h  _reg_localTransformation_be.cpp  _reg_localTransformation_gpu.cu  _reg_localTransformation_jac.cpp  _reg_localTransformation_kernels.cu  _reg_maths.cpp  _reg_maths.h  _reg_mutualinformation.cpp  _reg_mutualinformation.h  (+12 more)
nifty_reg/reg-lib_gpu/: CMakeLists.txt  _reg_affineTransformation_gpu.cu  _reg_affineTransformation_kernels.cu  _reg_blockMatching_gpu.cu  _reg_blockMatching_kernels.cu  _reg_blocksize_gpu.h  _reg_bspline_gpu.cu  _reg_bspline_gpu.h  _reg_bspline_kernels.cu  _reg_cudaCommon.h  _reg_mutualinformation_gpu.cu  _reg_mutualinformation_gpu.h  _reg_mutualinformation_kernels.cu  _reg_resampling_gpu.cu  _reg_resampling_gpu.h  _reg_resampling_kernels.cu  _reg_tools_gpu.cu  _reg_tools_gpu.h  _reg_tools_kernels.cu
nifty_reg/reg-test/: CMakeLists.txt  reg_test_interp.cpp
nifty_reg/zlib/: CMakeLists.txt
reg-apps/: CMakeLists.txt  command_line_reader.cpp  command_line_reader.h  command_line_reader_abstract.cpp  command_line_reader_abstract.h  command_line_reader_div_free_projection.cpp  command_line_reader_div_free_projection.h  command_line_reader_reg_ipopt.cpp  command_line_reader_reg_ipopt.h  command_line_reader_reg_ipopt_eval.cpp  command_line_reader_reg_ipopt_eval.h  cxxopts.h  exception.h  groupwise_niftyreg_params.sh  groupwise_niftyreg_run.sh  reg_aladin.cpp  reg_aladin.h  reg_aladin.h.in  reg_average.cpp  reg_average.h  reg_average.h.in  reg_benchmark.cpp  reg_clinfo.cpp  reg_discrete_continuous.cpp  reg_div_free.cpp  reg_f3d.cpp  reg_f3d.h  reg_f3d.h.in  reg_gpuinfo.cpp  reg_ipopt.cpp  reg_ipopt_eval.cpp  reg_jacobian.cpp  reg_jacobian.h  reg_jacobian.h.in  reg_measure.cpp  reg_mrf.cpp  reg_ppcnr.cpp  reg_resample.cpp  reg_resample.h  reg_resample.h.in  (+7 more)
reg-dev/: CMakeLists.txt  reg_discrete_init.cpp  reg_mrf.cpp
reg-io/: CMakeLists.txt  RNifti.h  _reg_ReadWriteBinary.cpp  _reg_ReadWriteBinary.h  _reg_ReadWriteImage.cpp  _reg_ReadWriteImage.h  _reg_ReadWriteMatrix.cpp  _reg_ReadWriteMatrix.h  _reg_stringFormat.cpp  _reg_stringFormat.h
reg-io/RNifti/: NiftiImage.h  NiftiImage_impl.h  NiftiImage_matrix.h  NiftiImage_print.h
reg-io/nifti/: CMakeLists.txt  nifti1.h  nifti1_io.c  nifti1_io.h  znzlib.h
reg-io/niftilib/: CMakeLists.txt  nifti1.h  (+6 more)
reg-lib/: AffineDeformationFieldKernel.h  AladinContent.cpp  AladinContent.h  AladinContentCreator.h  BlockMatchingKernel.h  CLContext.cpp  CLContext.h  CLKernels.cpp  CLKernels.h  CLPlatform.cpp  CLPlatform.h  CMakeLists.txt  CPUKernelFactory.cpp  CPUKernelFactory.h  CPUKernels.cpp  CPUKernels.h  CPUPlatfom.cpp  CPUPlatform.h  Compute.cpp  Compute.h  ComputeFactory.h  Content.cpp  Content.h  ContentCreator.h  ContentCreatorFactory.h  Context.cpp  Context.h  ConvolutionKernel.cu  ConvolutionKernel.h  CudaContext.cpp  CudaContext.h  CudaKernelFactory.cpp  CudaKernels.cpp  CudaKernels.h  CudaPlatform.cpp  Debug.hpp  DefContent.cpp  DefContent.h  DefContentCreator.h  DeformationFieldFromVelocityGridKernel.h  (+125 more)
reg-lib_gpu/: CMakeLists.txt  _reg_affineTransformation_gpu.h  _reg_blockMatching_gpu.cu  _reg_blockMatching_gpu.h  _reg_blockMatching_kernels.cu  _reg_blocksize_gpu.h  _reg_bspline_gpu.cu  _reg_bspline_gpu.h  _reg_bspline_kernels.cu  _reg_cudaCommon.cu  _reg_mutualinformation_gpu.cu  _reg_mutualinformation_gpu.h  _reg_mutualinformation_kernels.cu  _reg_resampling_gpu.cu  _reg_resampling_kernels.cu  _reg_tools_gpu.cu  _reg_tools_gpu.h
reg-test/: CMakeLists.txt  CTestCustom.cmake.in  clInfo.cpp  create_test_data.sh  mattias.h  reg_benchmark.cpp  reg_test_affineDeformationField.cpp  reg_test_affine_deformation_field.cpp  reg_test_affine_deformation_field_cl.cpp  reg_test_affine_deformation_field_cuda.cpp  reg_test_be.cpp  reg_test_blockMatching.cpp  reg_test_blockMatching_cl.cpp  reg_test_blockMatching_cuda.cpp  reg_test_blockMatching_cuda_cusvd.cpp  reg_test_blockMatching_mrf.cpp  reg_test_bspline_deformation_field.cpp  reg_test_changeDataType.cpp  reg_test_coherence_affine_deformation_field.cpp  reg_test_coherence_blockMatching.cpp  reg_test_coherence_interpolation.cpp  reg_test_coherence_mrf.cpp  reg_test_common.h  reg_test_composeField.cpp  reg_test_compose_deformation_field.cpp  reg_test_computation_time.cpp  reg_test_conjugateGradient.cpp  reg_test_context.cpp  reg_test_convolution.cpp  reg_test_convolution_gpu.cpp  reg_test_def_gpu.cpp  reg_test_dti.cpp  reg_test_freshGrid.cpp  reg_test_fullAffine.cpp  reg_test_fullAffine_cl.cpp  reg_test_fullAffine_cuda.cpp  reg_test_fullNonlinear.cpp  reg_test_fullReg.cpp  reg_test_fullSymNonlinear.cpp  reg_test_getDeformationField.cpp  (+52 more)
reg_divers/: CMakeLists.txt  reg_benchmark.cpp
(+424 files in other folders)
