[metadata]
name=niftyreg
description=NiftyReg Python package
long_description=file: README.txt
long_description_content_type=text/markdown
license_file=LICENSE.txt
url=https://github.com/KCL-BMEIS/niftyreg
project_urls=
    Changelog=https://github.com/KCL-BMEIS/niftyreg/releases
author=Marc Modat
maintainer=Casper da Costa-Luis
maintainer_email=imaging@cdcl.ml
keywords=image-registration
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
python_requires=>=3.6
[options.entry_points]
console_scripts=
    niftyreg=niftyreg:main
